<resources>
    <string name="app_name">Expense tracker</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdraw</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="word_bank">Bank</string>
    <string name="word_cash">Cash</string>
    <string name="createPayment_guide_tv1">Payment amount</string>
    <string name="createPayment_guide_tv2">Payment type</string>
    <string name="createPayment_guide_tv3">Category</string>
    <string name="word_create">Create</string>
    <string name="delete_payment_record">Are you sure you want to delete this payment record?</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="activity_label_createPayment">Record new payment</string>
    <string name="word_save">Save</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_accounts">Accounts</string>
    <string name="word_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="guide_tv_edit_accounts">Edit accounts</string>
    <string name="word_add">Add</string>
    <string name="word_title">Title</string>
    <string name="title_activity_addOrEditAccount">Add / edit account</string>
    <string name="word_delete">Delete</string>
    <string name="current_account_key_file">com.iremia.app.numisight_currentAccount</string>
    <string name="sentence_enter_description">Payment description (optional)</string>
    <string name="sentence_set_date_manually">Set date manually</string>
    <string name="title_activity_payment_date">PaymentDate</string>
    <string name="word_code">Code</string>
    <string name="word_category">Category</string>
    <string name="welcome_text">Welcome to Expense Tracker!\nCreate your account.</string>
    <string name="phrase_account_name">Account name</string>
    <string name="phrase_account_currency">Account currency</string>
    <string name="phrase_database_file_name">Database file name</string>
    <string name="word_name_colon">Name: </string>
    <string name="word_currency_colon">Currency: </string>
    <string name="word_type_colon">"Type: "</string>
    <string name="word_balance_colon">"Balance: "</string>
    <string name="word_saved">Saved</string>
    <string name="word_details">Details</string>
    <string name="show_more">Show more</string>
    <string name="word_week">Week</string>
    <string name="word_month">Month</string>
    <string name="word_year">Year</string>
</resources>