<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".InitialAccount">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phrase_account_name" />

        <EditText
            android:id="@+id/et_initialAccount_title"
            style="@style/InputMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/word_title"
            android:inputType="text"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phrase_account_currency" />

        <Spinner
            android:id="@+id/spinner_initialAccount_currency"
            style="@style/InputMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/et_initialAccount_currency"
            style="@style/InputMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="UAH"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phrase_database_file_name" />

        <TextView
            android:id="@+id/tv_initialAccount_dbName"
            style="@style/InputMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="initialAccount.db" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_initialAccount_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/word_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>