<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        style="@style/ExpenseTrackerToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_corners_bg_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

        <TextView
            android:id="@+id/tv_balance"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            tools:text="₴ 1000.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_PaymentHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deposit_btn"
        style="@style/FABMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/deposit"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/withdraw_btn"
        app:layout_constraintEnd_toEndOf="@+id/withdraw_btn"
        app:srcCompat="@drawable/ic_deposit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/withdraw_btn"
        style="@style/FABMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/withdrawal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/main_add_btn"
        app:layout_constraintEnd_toEndOf="@+id/main_add_btn"
        app:srcCompat="@drawable/ic_withdraw" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_add_btn"
        style="@style/FABMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/word_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_more_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/show_more"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/white"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_down"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>